# meltrix_old

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  README_old.md  conanfile.py  update_version.py
.github/workflows/: deploy.yml  static-deploy.yml  static.yml
docs/: Doxyfile  Doxyfile.in
docs/doxygen-awesome-css/: header.html
docs/html/: a00002.html  a00002.js  a00002_source.html  a00005.html  a00005.js  a00005_source.html  a00008.html  a00008.js  a00008_source.html  a00009.html  a00011.html  a00011.js  a00011_source.html  a00012.html  a00012.js  a00014.html  a00014.js  a00014_source.html  a00017.html  a00017_source.html  a00018.html  a00020.html  a00020_source.html  a00021.html  a00022.html  a00023.html  a00023.js  a00023_source.html  a00024.html  a00025.html  a00026.html  a00026_source.html  a00027.html  a00027.js  a00028.html  a00029.html  a00029.js  a00030.html  a00031.html  a00031.js  (+137 more)
docs/html/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_7.js  functions_a.js  namespaces_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js
include/: CMakeLists.txt  IdentityMatrix.h  MatrixBase.h  RandomMatrix.h  ZeroMatrix.h  meltrix.h
src/: CMakeLists.txt  IdentityMatrix.cpp  MatrixBase.cpp  RandomMatrix.cpp  ZeroMatrix.cpp  meltrix.cpp
test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: example.cpp
unit_tests/: CMakeLists.txt  basic_operations_test.cpp  default_initialisation_test.cpp  matrix_comparison_test.cpp  matrix_functions_test.cpp  test.cpp
